--- a/IOS/PolyFeeds/PolyFeeds/Base.lproj/Main.storyboard
+++ b/IOS/PolyFeeds/PolyFeeds/Base.lproj/Main.storyboard
@@ -68,14 +68,15 @@
                         <viewControllerLayoutGuide type="bottom" id="BwM-kG-kF1"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Txs-zB-DLA">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="T3S-V4-tDe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="915" y="337"/>
+            <point key="canvasLocation" x="262.5" y="874.5"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="lwc-5R-g15">
@@ -86,21 +87,21 @@
                         <viewControllerLayoutGuide type="bottom" id="suy-wB-47P"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="g5B-pn-s6M">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9c8-1r-MBC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2373" y="669"/>
+            <point key="canvasLocation" x="1781" y="1157"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="wSa-FW-hth">
             <objects>
                 <tableViewController clearsSelectionOnViewWillAppear="NO" id="mdF-CP-cXr" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="O5b-vj-f3w">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
@@ -120,7 +121,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KKv-Mc-qRP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3194" y="6"/>
+            <point key="canvasLocation" x="2602" y="494"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="yxv-7f-2rp">
@@ -136,12 +137,13 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fMb-U4-YhL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2376" y="4"/>
+            <point key="canvasLocation" x="1784" y="492"/>
         </scene>
         <!--Split View Controller-->
         <scene sceneID="bb2-cM-bTm">
             <objects>
                 <splitViewController id="lyA-vE-ofV" sceneMemberID="viewController">
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <segue destination="niA-lW-Qxe" kind="relationship" relationship="masterViewController" id="xPK-mP-3ia"/>
                         <segue destination="qTs-jg-DLW" kind="relationship" relationship="detailViewController" id="N46-dy-ZBR"/>
@@ -149,7 +151,7 @@
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hye-my-gZl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1558" y="336"/>
+            <point key="canvasLocation" x="683.5" y="874.5"/>
         </scene>
     </scenes>
 </document>
